# ecom-predict

./: .gitignore  .pre-commit-config.yaml  3 Sum.py  4 Sum.py  BFS.py  Binary Search.py  DFS.py  Linear search.py  MinMaxArray.py  Missing number.py  PairwithSum.py  README.md  count of ele once.py  frequency of elements in arr.py  increasing sequence.py  leaders.py  leap_years.py  pyproject.toml  queue.py  remove element.py  requirements.txt  secondlowestgrade.py  stack.py  string , width.py  substring count.py  sum in range.py  testproblem1.py  testproblem2.py  testproblem3.py  testproblem4.py  uv.toml
.github/workflows/: ci.yml
app/: api.py
dashboard/: streamlit_app.py
data/processed/: ecommerce_sales_featured.csv  ecommerce_sales_preprocessed.csv
data/raw/: ecommerce_sales.csv
docs/: cross_validation_and_hyperparameter_optimization.md  ml_algorithms_overview.md  uv-best-practices.md
models/archieve/xgboost/: xgb_model.pkl
models/meta/: meta_model.pkl
models/optimized/: meta_model_optimized.pkl  optimization_results.json  xgboost_optimized.pkl
notebooks/: data_preprocessing.ipynb  ensemble_and_evaluation.ipynb  feature_engineering.ipynb  least_selling_products_analysis.ipynb  model_training_and_predictions.ipynb  model_training_optimized.ipynb  text_processing.ipynb
scripts/: setup-dev.ps1  setup-dev.sh
src/: __init__.py  main.py  utils.py
tests/: conftest.py  test_main.py  test_utils.py
